done with profile links in experts

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 					Mozilla
 					</div>
 					<div class="icon-div text-center small-12 columns">
-						<a href="#"><i class="fa fa-facebook"></i></a>
+						<!-- <a href="#"><i class="fa fa-facebook"></i></a>
 						<a href="#"><i class="fa fa-google-plus"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-linkedin"></i></a>
+						<a href="#"><i class="fa fa-twitter"></i></a> -->
+						<a href="https://www.linkedin.com/pub/bhavana-bajaj"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
@@ -81,10 +81,10 @@
 					Feminist Approach to Technology
 					</div>
 					<div class="icon-div text-center small-12 columns">
-						<a href="#"><i class="fa fa-facebook"></i></a>
+						<!-- <a href="#"><i class="fa fa-facebook"></i></a>
 						<a href="#"><i class="fa fa-google-plus"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-linkedin"></i></a>
+						<a href="#"><i class="fa fa-twitter"></i></a> -->
+						<a href="https://www.linkedin.com/pub/shivani-gupta"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
@@ -103,10 +103,10 @@
 					Mozilla
 					</div>
 					<div class="icon-div text-center small-12 columns">
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-google-plus"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-linkedin"></i></a>
+						<a href="https://www.facebook.com/tessyjj"><i class="fa fa-facebook"></i></a>
+						<!-- <a href="#"><i class="fa fa-google-plus"></i></a>
+						<a href="#"><i class="fa fa-twitter"></i></a> -->
+						<a href="http://in.linkedin.com/in/tessyj"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
@@ -125,10 +125,10 @@
 						Startup Village
 					</div>
 					<div class="icon-div text-center small-12 columns">
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-google-plus"></i></a>
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-linkedin"></i></a>
+						<a href="https://www.facebook.com/vadakemuri"><i class="fa fa-facebook"></i></a>
+						<a href="https://plus.google.com/+SijoKuruvilla/posts"><i class="fa fa-google-plus"></i></a>
+						<a href="https://twitter.com/sijokuruvilla"><i class="fa fa-twitter"></i></a>
+						<a href="https://in.linkedin.com/in/sijokuruvillageorge"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
