--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 			 	<a href="#register" class="button">Register</a>
 			 	<a href="#schedule" class="button">Schedule</a>
 			 </div>
+			 <div class="event-date small-12 columns small-text-center">FEBRUARY 21-22, 2015
+FISAT, ANGAMALY</div>
+			 <div class="venue small-12 columns small-text-center">Venue:FISAT, Angamaly</div>
 			 <div class="small-12 columns sharing-div">
 			 	<p class="share-text small-12 columns text-center">Follow Us On</p>
 			 	<div class="small-12 columns share-buttons">
