completed correcting footer address

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ FISAT, ANGAMALY</div>
 						<a href="#"><i class="fa fa-google-plus"></i></a>
 						<a href="#"><i class="fa fa-twitter"></i></a> -->
 						<a href="https://www.linkedin.com/pub/bhavana-bajaj/13/9b6/355">
+							<i class="fa fa-linkedin"></i>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -528,10 +530,10 @@ What all should I bring along?					</div>
 						Core Team/Rep
 					</div>
 					<div class="helper-phone small-12 columns">
-						Phone:9895891389
+						Phone:8547864065
 					</div>
 					<div class="helper-email small-12 columns">
-						varghesethomase@gmail.com
+						Email:binoybalu1993@gmail.com
 					</div>
 				</div>
 				<div class="small-12 medium-6 columns hide-for-small-only helper">
@@ -542,24 +544,24 @@ What all should I bring along?					</div>
 						Core Team/Rep
 					</div>
 					<div class="helper-phone small-12 columns">
-						Phone:9895891389
+						Phone:9446534463
 					</div>
 					<div class="helper-email small-12 columns">
-						varghesethomase@gmail.com
+						this4midhun@gmail.com
 					</div>
 				</div>
 				<div class="small-12 medium-6 columns hide-for-small-only helper">
 					<div class="helper-name small-12 columns">
-						Nidhiya 
+						Shine Nelson
 					</div>
 					<div class="helper-role small-12 columns">
-						Core Team/Rep
+						Core Team
 					</div>
 					<div class="helper-phone small-12 columns">
-						Phone:9895891389
+						Phone:8089960650
 					</div>
 					<div class="helper-email small-12 columns">
-						varghesethomase@gmail.com
+						radioactive.life@gmail.com
 					</div>
 				</div>
 			</div>
