footer links for mozk and fisat corrected

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>HackrGirls | Mozilla Kerala</title>
+	<title>HackrGirls | Developer Bootcamp for Women | Mozilla Kerala</title>
 	<meta content="IE=edge" http-equiv="X-UA-Compatible"></meta>
 	<meta content="width=device-width, initial-scale=1, user-scalable=yes" name="viewport"></meta>
 	<link href="https://www.mozilla.org/tabzilla/media/css/tabzilla.css" rel="stylesheet" />
@@ -503,7 +503,7 @@ What all should I bring along?					</div>
 			<div class="small-12 medium-3 columns">
 				<div class="small-12 columns credits">Credits</div>
 				<div class="small-12 columns initiative">
-					A <a href="#">Mozilla Kerala</a> Initiative in association with <a href="#">FISAT</a>
+					A <a href="http://mozillakerala.org">Mozilla Kerala</a> Initiative in association with <a href="http://fisat.ac.in">FISAT</a>
 				</div>
 			</div>
 			<div class="small-12 medium-6 columns contacts">
