fixed text and made expert link of linkedin only

--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
 			 	<a href="#register" class="button">Register</a>
 			 	<a href="#schedule" class="button">Schedule</a>
 			 </div>
-			 <div class="event-date small-12 columns small-text-center">FEBRUARY 21-22, 2015
-FISAT, ANGAMALY</div>
-			 <div class="venue small-12 columns small-text-center">Venue:FISAT, Angamaly</div>
+			 <div class="event-date small-12 columns small-text-center">FEBRUARY 21-22</div>
+			 <div class="venue small-12 columns small-text-center">FISAT, Angamaly</div>
 			 <div class="small-12 columns sharing-div">
 			 	<p class="share-text small-12 columns text-center">Follow Us On</p>
 			 	<div class="small-12 columns share-buttons">
 			 		<a href="https://www.facebook.com/HackrGirls"><i class="fa fa-facebook-square"></i></a>
 			 		<a href="https://twitter.com/HackrGirls"><i class="fa fa-twitter-square"></i></a>
-			 		<a href="https://www.youtube.com/channel/UCXRYRbiU4X1w87vVB34n_-w"><i class="fa fa-youtube-square"></i></a>
+			 		<!-- <a href="https://www.youtube.com/channel/UCXRYRbiU4X1w87vVB34n_-w"><i class="fa fa-youtube-square"></i></a> -->
 			 	</div>
 			 </div>
 			</div>
@@ -108,7 +107,7 @@ FISAT, ANGAMALY</div>
 					Mozilla
 					</div>
 					<div class="icon-div text-center small-12 columns">
-						<a href="https://www.facebook.com/tessyjj"><i class="fa fa-facebook"></i></a>
+						<!-- <a href="https://www.facebook.com/tessyjj"><i class="fa fa-facebook"></i></a> -->
 						<!-- <a href="#"><i class="fa fa-google-plus"></i></a>
 						<!-- <a href="#"><i class="fa fa-facebook"></i></a>
 						<a href="#"><i class="fa fa-google-plus"></i></a>
@@ -132,9 +131,9 @@ FISAT, ANGAMALY</div>
 						Startup Village
 					</div>
 					<div class="icon-div text-center small-12 columns">
-						<a href="https://www.facebook.com/vadakemuri"><i class="fa fa-facebook"></i></a>
+						<!-- <a href="https://www.facebook.com/vadakemuri"><i class="fa fa-facebook"></i></a>
 						<a href="https://plus.google.com/+SijoKuruvilla/posts"><i class="fa fa-google-plus"></i></a>
-						<a href="https://twitter.com/sijokuruvilla"><i class="fa fa-twitter"></i></a>
+						<a href="https://twitter.com/sijokuruvilla"><i class="fa fa-twitter"></i></a> -->
 						<a href="https://in.linkedin.com/in/sijokuruvillageorge"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
