--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						Tessy Joseph
 					</div>
 					<div class="small-12 columns title-div text-center">
-					Mobile Web QA Intern
+					Web QA Intern
 					</div>
 					<div class="small-12 columns title-div text-center">
 					Mozilla
