few revisions and deletions to footer links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<title>HackrGirls | Developer Bootcamp for Women | Mozilla Kerala</title>
 	<meta content="IE=edge" http-equiv="X-UA-Compatible"></meta>
 	<meta content="width=device-width, initial-scale=1, user-scalable=yes" name="viewport"></meta>
-	<link href="https://www.mozilla.org/tabzilla/media/css/tabzilla.css" rel="stylesheet" />
+	<meta name="description" content="HackrGirls : A Developer Bootcamp for Women organized by Mozilla Kerala on February 21-22, 2015. The event focuses on bringing the women folk of Kerala to the world of open-source code and bootstrap and kickstart the participants to contributing code to open-source projects.">
+	<meta name="keywords" content="Girls, HackrGirls, Hackr Girls, WoMoz, WoMoz Kerala, Bootcamp, Developer Bootcamp, Open-source, Code, Coding, Kerala, Mozilla Kerala">
+	<link rel="shortcut icon" type="image/png" href="favicon.png">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600' rel='stylesheet' type='text/css'>
 	<link type="text/css" href="css/font-awesome.min.css" rel="stylesheet">
@@ -446,7 +448,7 @@ We have created an extremely positive and relaxed environment all geared towards
 					</div>
 					<div class="small-12 question-body columns">
 					 
-No. This event is invite-only. We have a very tight capacity. To ensure maximum productivity, we have fixed a capacity of only 50.
+No. This event is invite-only. We have a very tight capacity. To ensure maximum productivity, we have fixed a capacity of only <strong>50</strong>.
 So, if you're a woman and want to be a part of the elite 50, register yourself now!
 
 					</div>
@@ -502,23 +504,23 @@ What all should I bring along?					</div>
 			<div class="small-12 medium-3 columns">
 				<div class="small-12 columns credits">Credits</div>
 				<div class="small-12 columns initiative">
-					A <a href="http://mozillakerala.org">Mozilla Kerala</a> Initiative in association with <a href="http://fisat.ac.in">FISAT</a>
+					A <a href="http://mozillakerala.org">Mozilla Kerala</a> Initiative in association with <a href="http://fisat.ac.in">FISAT</a><!-- ,Angamaly -->
 				</div>
 			</div>
 			<div class="small-12 medium-6 columns contacts">
 				<div class="small-12 columns help">Help?</div>
 				<div class="small-12 medium-6 columns helper">
 					<div class="helper-name small-12 columns">
-						Sirajul Muneer
+						Nidhiya V Raj
 					</div>
 					<div class="helper-role small-12 columns">
-						Core Team
+						Mozillian
 					</div>
 					<div class="helper-phone small-12 columns">
-						Phone:9496805898
+						Phone: +91 9400-905-171
 					</div>
 					<div class="helper-email small-12 columns">
-						Email:siraj.mussafirr@gmail.com
+						Email: nidhiyarsnd@gmail.com 
 					</div>
 				</div>
 				<div class="small-12 medium-6 columns helper">
@@ -526,13 +528,13 @@ What all should I bring along?					</div>
 						Binoy Balu
 					</div>
 					<div class="helper-role small-12 columns">
-						Core Team/Rep
+						Mozilla Rep
 					</div>
 					<div class="helper-phone small-12 columns">
-						Phone:8547864065
+						Phone: +91 8547-864-065
 					</div>
 					<div class="helper-email small-12 columns">
-						Email:binoybalu1993@gmail.com
+						Email: binoybalu1993@gmail.com
 					</div>
 				</div>
 				<div class="small-12 medium-6 columns hide-for-small-only helper">
@@ -540,13 +542,13 @@ What all should I bring along?					</div>
 						Midhun Manoj
 					</div>
 					<div class="helper-role small-12 columns">
-						Core Team/Rep
+						Mozilla Rep
 					</div>
 					<div class="helper-phone small-12 columns">
-						Phone:9446534463
+						Phone: +91 9446-534-463
 					</div>
 					<div class="helper-email small-12 columns">
-						this4midhun@gmail.com
+						Email: this4midhun@gmail.com
 					</div>
 				</div>
 				<div class="small-12 medium-6 columns hide-for-small-only helper">
@@ -554,23 +556,24 @@ What all should I bring along?					</div>
 						Shine Nelson
 					</div>
 					<div class="helper-role small-12 columns">
-						Core Team
+						Mozillian
 					</div>
 					<div class="helper-phone small-12 columns">
-						Phone:8089960650
+						Phone: +91 8089-960-650
 					</div>
 					<div class="helper-email small-12 columns">
-						radioactive.life@gmail.com
+						Email: radioactive.life@gmail.com
 					</div>
 				</div>
 			</div>
 			<div class="small-12 medium-3 columns links-outer">
 				<div class="small-12 columns">
+					<!-- <div class="small-12 columns credits">Social Media</div> -->
 					<ul class="links">
 						<li><a href="https://facebook.com/MozillaKerala">Facebook</a></li>
 						<li><a href="https://facebook.com/groups/MozillaKerala">Facebook Group</a></li>
 						<li><a href="https://twitter.com/MozillaKerala">Twitter</a></li>
-						<li><a href="https://plus.google.com/114831280089581546580">Google Plus</a></li>
+						<li><a href="https://plus.google.com/114831280089581546580">Google+</a></li>
 <!-- 						<li><a href="#">Download Firefox</a></li>
  -->						<li><a href="https://github.com/MozillaKerala">Github</a></li>
 					</ul>
