added 50 seats text

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			 		<!-- <a href="https://www.youtube.com/channel/UCXRYRbiU4X1w87vVB34n_-w"><i class="fa fa-youtube-square"></i></a> -->
 			 	</div>
 			 </div>
+			 <div class="seats small-12 columns">Hurry up! Only <strong>50</strong> seats!!</div>
 			</div>
 			
 		</section>
