--- a/index.html
+++ b/index.html
@@ -585,6 +585,18 @@ What all should I bring along?					</div>
 		</div>
 	</footer>
 	<script src="https://maps.googleapis.com/maps/api/js"></script>
-
+	<script type="text/javascript">
+	var _paq = _paq || [];
+	_paq.push(['trackPageView']);
+	_paq.push(['enableLinkTracking']);
+	(function() {
+	var u="//piwik.mozillakerala.org/";
+	_paq.push(['setTrackerUrl', u+'piwik.php']);
+	_paq.push(['setSiteId', 8]);
+	var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+	g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+	})();
+	</script>
+	<noscript><p><img src="//piwik.mozillakerala.org/piwik.php?idsite=8" style="border:0;" alt="" /></p></noscript>
 </body>
 </html>
