reverting footer content

--- a/index.html
+++ b/index.html
@@ -512,6 +512,21 @@ What all should I bring along?					</div>
 				<div class="small-12 columns help">Help?</div>
 				<div class="small-12 medium-6 columns helper">
 					<div class="helper-name small-12 columns">
+						Sirajul Muneer
+					</div>
+					<div class="helper-role small-12 columns">
+						Mozillian
+					</div>
+					<div class="helper-phone small-12 columns">
+						Phone: +91 9496-805-898
+					</div>
+					<div class="helper-email small-12 columns">
+						Email: siraj.mussafirr@gmail.com 
+					</div>
+				</div>
+				<!--
+				<div class="small-12 medium-6 columns helper">
+					<div class="helper-name small-12 columns">
 						Nidhiya V Raj
 					</div>
 					<div class="helper-role small-12 columns">
@@ -524,6 +539,7 @@ What all should I bring along?					</div>
 						Email: nidhiyarsnd@gmail.com 
 					</div>
 				</div>
+				-->
 				<div class="small-12 medium-6 columns helper">
 					<div class="helper-name small-12 columns">
 						Binoy Balu
