--- a/index.html
+++ b/index.html
@@ -524,22 +524,6 @@ What all should I bring along?					</div>
 						Email: siraj.mussafirr@gmail.com 
 					</div>
 				</div>
-				<!--
-				<div class="small-12 medium-6 columns helper">
-					<div class="helper-name small-12 columns">
-						Nidhiya V Raj
-					</div>
-					<div class="helper-role small-12 columns">
-						Mozillian
-					</div>
-					<div class="helper-phone small-12 columns">
-						Phone: +91 9400-905-171
-					</div>
-					<div class="helper-email small-12 columns">
-						Email: nidhiyarsnd@gmail.com 
-					</div>
-				</div>
-				-->
 				<div class="small-12 medium-6 columns helper">
 					<div class="helper-name small-12 columns">
 						Binoy Balu
@@ -554,7 +538,7 @@ What all should I bring along?					</div>
 						Email: binoybalu1993@gmail.com
 					</div>
 				</div>
-				<div class="small-12 medium-6 columns hide-for-small-only helper">
+				<!-- <div class="small-12 medium-6 columns hide-for-small-only helper">
 					<div class="helper-name small-12 columns">
 						Midhun Manoj
 					</div>
@@ -566,6 +550,20 @@ What all should I bring along?					</div>
 					</div>
 					<div class="helper-email small-12 columns">
 						Email: this4midhun@gmail.com
+					</div>
+				</div> -->
+				<div class="small-12 medium-6 columns helper">
+					<div class="helper-name small-12 columns">
+						Nidhiya V Raj
+					</div>
+					<div class="helper-role small-12 columns">
+						Mozillian
+					</div>
+					<div class="helper-phone small-12 columns">
+						Phone: +91 9400-905-171
+					</div>
+					<div class="helper-email small-12 columns">
+						Email: nidhiyarsnd@gmail.com 
 					</div>
 				</div>
 				<div class="small-12 medium-6 columns hide-for-small-only helper">
