--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 			 <div class="small-12 columns sharing-div">
 			 	<p class="share-text small-12 columns text-center">Follow Us On</p>
 			 	<div class="small-12 columns share-buttons">
-			 		<a href="https://www.facebook.com/HackrGirls"><i class="fa fa-facebook-square"></i></a>
-			 		<a href="https://twitter.com/HackrGirls"><i class="fa fa-twitter-square"></i></a>
+			 		<a href="https://www.facebook.com/HackrGirls" target="_blank"><i class="fa fa-facebook-square"></i></a>
+			 		<a href="https://twitter.com/HackrGirls" target="_blank"><i class="fa fa-twitter-square"></i></a>
 			 		<!-- <a href="https://www.youtube.com/channel/UCXRYRbiU4X1w87vVB34n_-w"><i class="fa fa-youtube-square"></i></a> -->
 			 	</div>
 			 </div>
@@ -67,7 +67,7 @@
 						<a href="#"><i class="fa fa-google-plus"></i></a>
 						<a href="#"><i class="fa fa-twitter"></i></a> -->
 						<a href="https://www.linkedin.com/pub/bhavana-bajaj/13/9b6/355">
-							<i class="fa fa-linkedin"></i>
+							<i class="fa fa-linkedin" target="_blank"></i>
 						</a>
 					</div>
 				</div>
@@ -91,7 +91,7 @@
 						<a href="#"><i class="fa fa-google-plus"></i></a>
 						<a href="#"><i class="fa fa-twitter"></i></a> -->
 
-						<a href="https://in.linkedin.com/pub/shivani-gupta/51/320/402"><i class="fa fa-linkedin"></i></a>
+						<a href="https://in.linkedin.com/pub/shivani-gupta/51/320/402"><i class="fa fa-linkedin" target="_blank"></i></a>
 					</div>
 				</div>
 			</div>
@@ -115,7 +115,7 @@
 						<!-- <a href="#"><i class="fa fa-facebook"></i></a>
 						<a href="#"><i class="fa fa-google-plus"></i></a>
 						<a href="#"><i class="fa fa-twitter"></i></a> -->
-						<a href="http://in.linkedin.com/in/tessyj"><i class="fa fa-linkedin"></i></a>
+						<a href="http://in.linkedin.com/in/tessyj"><i class="fa fa-linkedin" target="_blank"></i></a>
 					</div>
 				</div>
 			</div>
@@ -137,7 +137,7 @@
 						<!-- <a href="https://www.facebook.com/vadakemuri"><i class="fa fa-facebook"></i></a>
 						<a href="https://plus.google.com/+SijoKuruvilla/posts"><i class="fa fa-google-plus"></i></a>
 						<a href="https://twitter.com/sijokuruvilla"><i class="fa fa-twitter"></i></a> -->
-						<a href="https://in.linkedin.com/in/sijokuruvillageorge"><i class="fa fa-linkedin"></i></a>
+						<a href="https://in.linkedin.com/in/sijokuruvillageorge" target="_blank"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
