editing  shivani and adding chinmay

--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
 						<img src="img/speaker2.jpeg">
 					</div>
 					<div class="small-12 columns name-div text-center">
-						Shivani Guptha
+						Chinmay S K
 					</div>
 					<div class="small-12 columns title-div text-center">
-					Program Associate
+						Founder
 					</div>
 					<div class="small-12 columns title-div text-center">
-					Feminist Approach to Technology
+						Saakshin Technolgies
 					</div>
 					<div class="icon-div text-center small-12 columns">
 						<!-- <a href="#"><i class="fa fa-facebook"></i></a>
 						<a href="#"><i class="fa fa-google-plus"></i></a>
 						<a href="#"><i class="fa fa-twitter"></i></a> -->
 
-						<a href="https://in.linkedin.com/pub/shivani-gupta/51/320/402"><i class="fa fa-linkedin" target="_blank"></i></a>
+						<a href="https://in.linkedin.com/pub/chinmayi-sk/7/177/859"><i class="fa fa-linkedin" target="_blank"></i></a>
 					</div>
 				</div>
 			</div>
